--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ httpx==0.28.1
 huggingface-hub==0.33.4
 idna==3.10
 Jinja2==3.1.6
+jsonpickle==4.1.1
 keras==3.10.0
 libclang==18.1.1
 Markdown==3.8.2
@@ -59,7 +60,9 @@ PyJWT==2.10.1
 pyparsing==3.2.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
+redis==6.2.0
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
